# tdcdft-omxc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  dft.hpp  systems.hpp  tddft.cpp  tddft.hpp  xc.cpp
docs/: Doxyfile  Makefile  conf.py  index.rst
docs/rst/: about.rst  doxy.rst  installation.rst  publications.rst
examples/: CMakeLists.txt  Makefile  infqw.cpp  plot.py  qw.cpp  spectrum.py
include/tdcdft-omxc/: au.hpp  dft.hpp  fxcmodels.hpp  gdb_arma.hpp  gs.hpp  hartree.hpp  mesh.hpp  qwmodels.hpp  systems.hpp  td.hpp  tddft.hpp  tools.hpp  xc.hpp
include/tdcdft-omxc/kernels/: M0.hpp  M1.hpp  M1_test1.hpp  M5_new.hpp
kernels/: M1_new.hpp  M5.hpp
src/: dft.cpp  gs.cpp  hartree.cpp  td.cpp  tddft.cpp  tools.cpp  xc.cpp
tests/: CMakeLists.txt  Makefile  main.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
tests/catch2/: catch.hpp
